Добавил документацию для новых путей, добавил отправку СМС для контрагентов
